--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -1,10 +1,37 @@
-font_size 13.0
-window_padding_width 8
-font_family      JetBrainsMono Nerd Font
-italic_font      auto
-# bold_font        auto
-bold_italic_font auto
-include theme.conf
-#background_opacity 0.60
-#hide_window_decorations yes
-#confirm_os_window_close 0
+# Fonts
+font_family		Maple Mono Regular
+bold_font		Maple Mono Bold
+italic_font		Maple Mono Italic
+bold_italic_font	Maple Mono BoldItalic
+
+font_size	14.0
+
+# Window and theme
+include	theme.conf
+enable_audio_bell	yes
+background_opacity	0.88
+remember_window_size	no
+initial_window_width	92c
+initial_window_height	28c
+window_padding_width	6
+confirm_os_window_close	-1
+
+# Background
+background_image	none
+background_image_layout	cscaled
+background_image_linear	no
+
+# Tabs
+bell_on_tab		on
+tab_bar_edge		buttom
+tab_bar_align		left
+tab_bar_style		custom
+tab_bar_min_tabs	1
+tab_activity_symbol	none
+tab_bar_margin_width	0.0
+tab_bar_margin_height	0.0 0.0
+tab_title_template	"{f'  ~  ' if title == '~' else (f'…{title[-15:]}' if len(title) > 16 else title)}"
+active_tab_font_style	bold
+
+
+#linux_display_server	x11
