migrated files from 'xwdee/dotfiles-archive'

--- a/configs/hypr/hypridle.conf
+++ b/configs/hypr/hypridle.conf
@@ -1,7 +1,8 @@
-$lock_cmd = pidof hyprlock || hyprlock
-
+################
+### HYPRIDLE ###
+################
 general {
-	lock_cmd = $lock_cmd
+	lock_cmd = pidof hyprlock || hyprlock
 	before_sleep_cmd = loginctl lock-session
 }
 
