--- a/configs/hypr/hyprpaper.conf
+++ b/configs/hypr/hyprpaper.conf
@@ -1,10 +1,10 @@
-# Replace with location of your wallpaper
-$wallpaper = ~/.config/assets/backgrounds/cat_leaves.png
-$monitor = eDP-1
-
-preload = $wallpaper
-wallpaper = $monitor, $wallpaper
-
-splash = false
-
-ipc = on
+#################
+### HYPRPAPER ###
+#################
+#$wallpapers	=
+$wallpaper1	=	~/Pictures/backgrounds/cat_leaves.png
+$monitor1	=	eDP-1
+preload		=	$wallpaper1
+wallpaper	=	$monitor1, $wallpaper1
+splash		=	false
+ipc		=	on
