--- a/configs/hypr/keybindings.conf
+++ b/configs/hypr/keybindings.conf
@@ -1,10 +1,10 @@
-## Initial Defaults
-$mainMod	=	SUPER
-$scripts	=	~/.config/assets/scripts/
+###################
+### KEYBINDINGS ###
+###################
+$mainMod=	SUPER
 
 ## Keybind to restart waybar and swaync
-bind	=	Ctrl, Escape, exec, $scripts/waybarRestart.sh
-
+bind	=	Ctrl, Escape, exec, ~/.config/waybar/restart.sh
 ## Fullscreen
 bind	=	$mainMod SHIFT, F, fullscreen,
 
@@ -26,8 +26,6 @@ bind	=	$mainMod SHIFT, Q, exec, $terminal2
 bind	=	$mainMod, E, exec, $fileManager
 bind	=	$mainMod, B, exec, $browser
 bind	=	$mainMod, A, exec, $music
-bind	=	$mainMod ALT, A, exec, [silent;float;size 50% 50%;centerwindow] $localmusic
-bind	=	$mainMod SHIFT, A, exec, $scripts/lofi.sh 
 bind	=	$mainMod, H, exec, hyprpicker -a
 bind	=	$mainMod, M, exec, $terminal nmtui
 
@@ -39,7 +37,7 @@ bind	=	$mainMod, Tab, exec, swaync-client -t -sw
 bind	=	$mainMod, C, killactive, 
 bind	=	$mainMod SHIFT, C, centerwindow
 bind	=	$mainMod, Escape, exec, wlogout
-bind	=	$mainMod, R, exec, $menu -show drun
+bind	=	$mainMod, R, exec, $menu drun
 bind	=	$mainMod, L, exec, hyprlock
 bind	=	$mainMod, P, pseudo,
 bind	=	$mainMod, J, togglesplit,
