--- a/configs/hypr/programs.conf
+++ b/configs/hypr/programs.conf
@@ -1,19 +1,15 @@
-## Define your Default Programs here
-
+################
+### PROGRAMS ###
+################
 $terminal	=	kitty
 $terminal2	=	xterm -bg black -fg white -fs 12 -fa 'JetBrainsMono Nerd Font'
 $editor		=	code-oss
-$browser	=	google-chrome-stable
-$fileManager	=	thunar
-$menu		=	rofi
-$discord	=	discord
-$whatsapp	=	flatpak run com.rtosta.zapzap
+$browser	=	/usr/bin/google-chrome-stable %U
+$fileManager	=	thunar %U
+$menu		=	rofi -show
+$discord	=	/usr/bin/discord
 $telegram	=	DESKTOPINTEGRATION=1 ayugram-desktop -- %u
 $steam		=	/usr/bin/steam-native %U
-$music		=	flatpak run com.spotify.Client
-$localmusic	=	$terminal cmus
-$youtube	=	$browser --new-window https://www.youtube.com/feed/subscriptions
-$chatgpt	=	$browser --new-window https://chat.openai.com/
-$gemini		=	$browser --new-window https://gemini.google.com/app
-$emoji_picker	=	flatpak run it.mijorus.smile
-$video_player	=	vlc
+$music		=	spotify-launcher %U
+$youtube	=	$browser --new-window https://www.youtube.com
+$chatgpt	=	$browser --new-window https://chat.openai.com
