--- a/configs/hypr/windrules.conf
+++ b/configs/hypr/windrules.conf
@@ -1,5 +1,6 @@
-## Example Window Rules V1
-#windowrule	=	float, kitty
+###################
+### WINDOWRULES ###
+###################
 windowrule	=	float, jome
 windowrule	=	size 900 512, thunar
 windowrule	=	float, thunar
