--- a/configs/hypr/workspaces.conf
+++ b/configs/hypr/workspaces.conf
@@ -1,4 +1,6 @@
-## Workspace Rules Customised accordingly
+##################
+### WORKSPACES ###
+##################
 workspace=special:overveiw,gapsout:5
 workspace=1,gapsout:5,gapsin:5,bordersize:2
 workspace=3,gapsout:5,gapsin:5,bordersize:2
