--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -7,7 +7,7 @@ bold_italic_font	Maple Mono BoldItalic
 font_size	14.0
 
 # Window and theme
-include	theme.conf
+include	mochatheme.conf
 enable_audio_bell	yes
 background_opacity	0.88
 remember_window_size	no
@@ -32,6 +32,3 @@ tab_bar_margin_width	0.0
 tab_bar_margin_height	0.0 0.0
 tab_title_template	"{f'  ~  ' if title == '~' else (f'…{title[-15:]}' if len(title) > 16 else title)}"
 active_tab_font_style	bold
-
-
-#linux_display_server	x11
