--- a/configs/hypr/envvars.conf
+++ b/configs/hypr/envvars.conf
@@ -3,27 +3,25 @@
 env	=	XCURSOR_SIZE,24
 env	=	HYPRCURSOR_SIZE,24
 env	=	QT_SCALE_FACTOR,1
-env	=	HYPRCURSOR_THEME,Bibata-Modern-Ice
 
-# Firefox
+# TroubleShoots
 #env	=	MOZ_ENABLE_WAYLAND,1
+#env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Intel
 env	=	LIBVA_DRIVER_NAME,i965
 env	=	GBM_BACKEND,drm
 env	=	MESA_LOADER_DRIVER_OVERRIDE,iris
-env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Nvidia
 #env	=	LIBVA_DRIVER_NAME,nvidia
 #env	=	GBM_BACKEND,nvidia-drm
 #env	=	__GLX_VENDOR_LIBRARY_NAME,nvidia
 #env	=	NVD_BACKEND,direct
-#env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # QT
 env	=	QT_QPA_PLATFORM,wayland
-env	=	QT_QPA_PLATFORMTHEME,qt5ct
+env	=	QT_QPA_PLATFORMTHEME,qt6ct
 env	=	QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env	=	QT_AUTO_SCREEN_SCALE_FACTOR,1
 env	=	QT_STYLE_OVERRIDE,kvantum
