--- a/configs/hypr/startup.conf
+++ b/configs/hypr/startup.conf
@@ -1,25 +1,20 @@
-$scripts	=	~/.config/dotfiles/hyprland/scripts/
-
-#exec-once	=	copyq --start-server
-#exec-once	=	dunst
-exec-once	=	swaync
+#################
+### AUTOSTART ###
+#################
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once	=	hyprlock
 exec-once	=	hyprpaper
 exec-once	=	hypridle
-exec-once	=	hyprlock
+exec-once	=	swaync
 exec-once	=	waybar
-exec-once	=	kdeconnectd
-#exec-once	=	[workspace 3 silent] $discord
-#exec-once	=	[workspace 4 silent] $whatsapp
-#exec-once	=	[workspace 4 silent] $telegram
-exec-once	=	/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once	=	/usr/libexec/xdg-desktop-portal-hyprland
-exec-once	=	/usr/libexec/xdg-desktop-portal
-exec-once	=	[workspace special:running silent] $browser
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
 exec-once	=	nm-applet
+exec-once	=	kdeconnectd
 exec-once	=	blueman-applet
+exec-once	=	blueman-tray
+exec-once	=	heroic
 exec-once	=	$steam -no-browser -silent
 exec-once	=	$telegram -autostart
 exec-once	=	$discord --start-minimized
-exec-once	=	heroic
+#exec-once	=	[workspace 3 silent] $discord
+#exec-once	=	[workspace 4 silent] $telegram
