--- a/configs/neofetch/config.conf
+++ b/configs/neofetch/config.conf
@@ -1,51 +1,25 @@
 # Source: https://github.com/Chick2D/neofetch-themes/ 
 # Do consider checking out the repository, it has a ton of great configs like this.
 
-# Made by: i forgor (Smallfetch)
+# Made by https://github.com/mmsaeed509 (ozozFetch)
 
 # Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 
-# See this wiki page for more info:
-# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    info title
-    info underline
-
-    info "OS" distro
-    # info "Host" model
-    info "Kernel" kernel
-    #info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    # info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    # info "WM Theme" wm_theme
-    # info "Theme" theme
-    # info "Icons" icons
-    info "Terminal" term
-    # info "Terminal Font" term_font
-    #info "CPU" cpu
-    #info "GPU" gpu
-    info "Memory" memory
-
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
-    # info "Font" font
-    # info "Song" song
-    # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
-    # info "Public IP" public_ip
-    # info "Users" users
-    # info "Locale" locale  # This only works on glibc systems.
-
-    # info cols
+        
+    prin "${c5} Sys-Info       "
+    info "${c2} ├─  Distro     " distro
+    info "${c2} ├─ 󰌽 Kernel     " kernel
+    info "${c2} ├─  DE/WM      " wm
+    info "${c2} ├─ 󰍛 CPU        " cpu
+    info "${c2} ├─ 󰍹 GPU        " gpu
+    info "${c2} ├─ 󰅐 Up Time    " uptime
+    info "${c2} └─  SHELL      " shell 
+    prin "$(color 1)  $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8)"
+    
 }
 
-# Title
-
+##--------- Title
 
 # Hide/Show Fully qualified domain name.
 #
@@ -55,8 +29,7 @@ print_info() {
 title_fqdn="off"
 
 
-# Kernel
-
+##--------- Kernel
 
 # Shorten the output of the kernel function.
 #
@@ -71,8 +44,7 @@ title_fqdn="off"
 kernel_shorthand="on"
 
 
-# Distro
-
+##--------- Distro
 
 # Shorten the output of the distro function
 #
@@ -80,7 +52,7 @@ kernel_shorthand="on"
 # Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="on"
+distro_shorthand="off"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
@@ -95,8 +67,7 @@ distro_shorthand="on"
 os_arch="off"
 
 
-# Uptime
-
+##--------- Uptime
 
 # Shorten the output of the uptime function
 #
@@ -111,8 +82,7 @@ os_arch="off"
 uptime_shorthand="on"
 
 
-# Memory
-
+##--------- Memory
 
 # Show memory pecentage in output.
 #
@@ -138,8 +108,7 @@ memory_percent="off"
 memory_unit="mib"
 
 
-# Packages
-
+##--------- Packages
 
 # Show/Hide Package Manager names.
 #
@@ -151,11 +120,10 @@ memory_unit="mib"
 # on:   '998 (pacman), 8 (flatpak), 4 (snap)'
 # tiny: '908 (pacman, flatpak, snap)'
 # off:  '908'
-package_managers="tiny"
+package_managers="on"
 
 
-# Shell
-
+##--------- Shell
 
 # Show the path to $SHELL
 #
@@ -180,8 +148,7 @@ shell_path="off"
 shell_version="on"
 
 
-# CPU
-
+##--------- CPU
 
 # CPU speed type
 #
@@ -239,7 +206,7 @@ cpu_speed="off"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="logical"
+cpu_cores="off"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -259,8 +226,7 @@ cpu_cores="logical"
 cpu_temp="off"
 
 
-# GPU
-
+##--------- GPU
 
 # Enable/Disable GPU Brand
 #
@@ -293,8 +259,7 @@ gpu_brand="off"
 gpu_type="integrated"
 
 
-# Resolution
-
+##--------- Resolution
 
 # Display refresh rate next to each monitor
 # Default: 'off'
@@ -308,8 +273,7 @@ gpu_type="integrated"
 refresh_rate="off"
 
 
-# Gtk Theme / Icons / Font
-
+##--------- Gtk Theme / Icons / Font
 
 # Shorten output of GTK Theme / Icons / Font
 #
@@ -321,7 +285,6 @@ refresh_rate="off"
 # on:  'Numix, Adwaita'
 # off: 'Numix [GTK2], Adwaita [GTK3]'
 gtk_shorthand="off"
-
 
 # Enable/Disable gtk2 Theme / Icons / Font
 #
@@ -346,8 +309,7 @@ gtk2="on"
 gtk3="on"
 
 
-# IP Address
-
+##--------- IP Address
 
 # Website to ping for the public IP
 #
@@ -363,9 +325,7 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-
 # Desktop Environment
-
 
 # Show Desktop Environment version
 #
@@ -375,8 +335,7 @@ public_ip_timeout=2
 de_version="on"
 
 
-# Disk
-
+##--------- Disk
 
 # Which disks to display.
 # The values can be any /dev/sdXX, mount point or directory.
@@ -433,8 +392,7 @@ disk_subtitle="mount"
 disk_percent="on"
 
 
-# Song
-
+##--------- Song
 
 # Manually specify a music player.
 #
@@ -495,8 +453,7 @@ music_player="auto"
 #
 # Example:
 # default: 'Song: Jet - Get Born - Sgt Major'
-#song_format="%artist% - %album% - %title%"
-song_format="%artist% - %title%"
+song_format="%artist% - %album% - %title%"
 
 # Print the Artist, Album and Title on separate lines
 #
@@ -519,8 +476,7 @@ song_shorthand="off"
 mpc_args=()
 
 
-# Text Colors
-
+##--------- Text Colors
 
 # Text Colors
 #
@@ -534,11 +490,10 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(1 2 3 4 5 6 7 8)
 
 
-# Text Options
-
+##--------- Text Options
 
 # Toggle bold text
 #
@@ -552,15 +507,14 @@ bold="on"
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --underline
-underline_enabled="off"
+underline_enabled="on"
 
 # Underline character
 #
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="/"
-
+underline_char="󰍴"
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -571,11 +525,10 @@ underline_char="/"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator="	"
 
 
-# Color Blocks
-
+##--------- Color Blocks
 
 # Color block range
 # The range of colors to print.
@@ -598,7 +551,7 @@ block_range=(0 15)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --color_blocks
-color_blocks="off"
+color_blocks="on"
 
 # Color block width in spaces
 #
@@ -628,8 +581,7 @@ block_height=1
 # col_offset=7      - Leave 7 spaces then print the colors
 col_offset="auto"
 
-# Progress Bars
-
+##--------- Progress Bars
 
 # Bar characters
 #
@@ -671,7 +623,6 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 
-
 # Info display
 # Display a bar with the info.
 #
@@ -693,8 +644,7 @@ battery_display="off"
 disk_display="off"
 
 
-# Backend Settings
-
+##--------- Backend Settings
 
 # Image backend.
 #
@@ -702,7 +652,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="kitty"
+image_backend="ascii"
 
 # Image Source
 #
@@ -716,11 +666,10 @@ image_backend="kitty"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="$HOME/.config/assets/kitty.png"
+image_source="$HOME/.config/neofetch/kitty.txt"
 
 
-# Ascii Options
-
+##--------- Ascii Options
 
 # Ascii distro
 # Which distro's ascii art to display.
@@ -768,7 +717,7 @@ image_source="$HOME/.config/assets/kitty.png"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="arch_small" # Change it to your distro's small.
+ascii_distro="arch_small"
 
 # Ascii Colors
 #
@@ -779,7 +728,7 @@ ascii_distro="arch_small" # Change it to your distro's small.
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+ascii_colors=(1 2 3 4 5 6 7 8)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -790,8 +739,7 @@ ascii_colors=(distro)
 ascii_bold="on"
 
 
-# Image Options
-
+##--------- Image Options
 
 # Image loop
 # Setting this to on will make neofetch redraw the image constantly until
@@ -834,14 +782,14 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="232px"
+image_size="216px"
 
 # Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=2
 
 # Image offsets
 # Only works with the w3m backend.
@@ -862,7 +810,7 @@ xoffset=0
 background_color=black
 
 
-# Misc Options
+##--------- Misc Options
 
 # Stdout mode
 # Turn off all colors and disables image backend (ASCII/Image).
