--- a/configs/waybar/config.jsonc
+++ b/configs/waybar/config.jsonc
@@ -1,154 +1,191 @@
 {
-	"layer": "top",
-	"position": "top",
-	"mode": "dock",
-	"exclusive": true,
-	"passthrough": false,
-	"gtk-layer-shell": true,
-	"height": 0,
-	"modules-left": [
-		"clock",
-		"cava",
-		"hyprland/language",
-		"hyprland/workspaces"
-		],
-	"modules-center": ["hyprland/window"],
-	"modules-right": [
-		"tray",
-		"memory",
-		"cpu",
-		"network",
-		"battery",
-		"backlight",
-		"pulseaudio",
-		"pulseaudio#microphone"
-		],
+"layer": "top",
+"position": "top",
+"mode": "dock",
+"exclusive": true,
+"passthrough": false,
+"gtk-layer-shell": true,
+"height": 0,
+"modules-left": [
+	"clock",
+	"custom/cava",
+	"hyprland/language",
+	"hyprland/workspaces"
+],
+"modules-center": ["hyprland/window"],
+"modules-right": [
+	"tray",
+	"memory",
+	"cpu",
+	"network",
+	"battery",
+	"custom/swaync",
+	"backlight",
+	"pulseaudio",
+	"pulseaudio#microphone"
+],
 
-	"hyprland/window": {
-		"format": " {}"
-		},
+"hyprland/window": {
+	"format": "󰌽 {}"
+},
 
-	"cava": {
-		"bars": 10,
-		"method": "pulse",
-		"source": "auto",
-		"bar_delimiter": 0,
-		"format-icons": ["▁","▂","▃","▄","▅","▆","▇","█"]
-		"actions": {
-			"on-click": "playerctl play-pause",
-			"on-click-right": "playerctl next"
-			}
-		},
+"hyprland/language": {
+	"format-en": "US",
+	"format-uk": "UA",
+	"format-ru": "RU",
+	"format": "{}"
+},
 
-	"hyprland/language": {
-		"format": "{}",
-		"format-en": "EN",
-		"format-uk": "UK",
-		"format-ru": "RU"
-		},
-    
-	"hyprland/workspaces": {
-		"disable-scroll": true,
-		"persistent-workspaces": {
-			"1": [],
-			"2": [],
-			"3": [],
-			"4": []
-			},
-		"all-outputs": true,
-		"on-click": "activate",
-		"format": "{icon}"
-		},
+"hyprland/workspaces": {
+	"disable-scroll": true,
+	"persistent-workspaces": {
+		"1": [],
+		"2": [],
+		"3": [],
+		"4": [],
+	},
+	"all-outputs": true,
+	"on-click": "activate",
+	"format": "{icon}"
+},
 
-	"tray": {
-		"icon-size": 13,
-		"spacing": 10
-		},
+"custom/cava": {
+	"exec": "~/.config/waybar/cava.sh",
+	"on-click": "playerctl play-pause",
+	"on-click-right": "playerctl next",
+	"format": "{}"
+},
 
-	"clock": {
-		"format": "{:%A    %B-%d-%Y    %H:%M:%S}",
-		"interval": 1,
-		"rotate": 0,
-		"tooltip-format": "<tt>{calendar}</tt>",
-		"calendar": {
-			"mode": "month",
-			"mode-mon-col": 3,
-			"on-scroll": 1,
-			"on-click-right": "mode",
-			"format": {
-				"months": "<span color='#a6adc8'><b>{}</b></span>",
-				"weekdays": "<span color='#a6adc8'><b>{}</b></span>",
-				"today": "<span color='#a6adc8'><b>{}</b></span>",
-				"days": "<span color='#555869'><b>{}</b></span>"
-			}
+"tray": {
+	"icon-size": 13,
+	"spacing": 10
+},
+
+"clock": {
+	"format": "{:%A    %B-%d-%Y    %H:%M:%S}",
+	"interval": 1,
+	"rotate": 0,
+	"tooltip-format": "<tt>{calendar}</tt>",
+	"calendar": {
+		"mode": "month",
+		"mode-mon-col": 3,
+		"on-scroll": 1,
+		"on-click-right": "mode",
+		"format": {
+			"months": "<span color='#a6adc8'><b>{}</b></span>",
+			"weekdays": "<span color='#a6adc8'><b>{}</b></span>",
+			"today": "<span color='#a6adc8'><b>{}</b></span>",
+			"days": "<span color='#555869'><b>{}</b></span>"
 		}
-	},
-
-	"backlight": {
-		"device": "intel_backlight",
-		"format": "{icon} {percent}%",
-		"format-icons": ["󰃞", "󰃟", "󰃠"],
-		"on-scroll-up": "brightnessctl set 1%+",
-		"on-scroll-down": "brightnessctl set 1%-",
-		"min-length": 6
-	},
-
-	"battery": {
-		"states": {
-			"good": 95,
-			"warning": 30,
-			"critical": 20
-		},
-		"format": "{icon} {capacity}%",
-		"format-charging": " {capacity}%",
-		"format-plugged": " {capacity}%",
-		"format-alt": "{time} {icon}",
-		"format-icons": ["󰂃", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
-	},
-
-	"pulseaudio#microphone": {
-		"format": "{format_source}",
-		"format-source": " {volume}%",
-		"format-source-muted": "  Muted",
-		"on-click": "pamixer --default-source -t",
-		"on-scroll-up": "pamixer --default-source -i 5",
-		"on-scroll-down": "pamixer --default-source -d 5",
-		"scroll-step": 5
-	},
-
-	"memory": {
-		"states": {
-			"c": 90,
-			"h": 60,
-			"m": 30
-		},
-		"interval": 10,
-		"format": "󰾆 {used}GB",
-		"format-m": "󰾅 {used}GB",
-		"format-h": "󰓅 {used}GB",
-		"format-c": " {used}GB",
-		"format-alt": "󰾆 {percentage}%",
-		"max-length": 10,
-		"tooltip": true,
-		"tooltip-format": "󰾆 {percentage}%\n {used:0.1f}GB/{total:0.1f}GB"
-	},
-
-	"cpu": {
-		"interval": 10,
-		"format": "󰍛 {usage}%",
-		"format-alt": "{icon0}{icon1}{icon2}{icon3}",
-		"format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
-	},
-
-	"network": {
-		"tooltip": true,
-		"format-wifi": "  {essid}",
-		"format-ethernet": "󰈀 ",
-		"tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({signalStrength}%)</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>\nIP: <b>{ipaddr}/{cidr}</b>\nGateway: <b>{gwaddr}</b>\nNetmask: <b>{netmask}</b>",
-		"format-linked": "󰈀 {ifname} (No IP)",
-		"format-disconnected": "󰖪 ",
-		"tooltip-format-disconnected": "Disconnected",
-		"format-alt": "<span foreground='#99ffdd'> {bandwidthDownBytes}</span> <span foreground='#ffcc66'> {bandwidthUpBytes}</span>",
-		"interval": 2
 	}
+},
+
+"backlight": {
+	"device": "intel_backlight",
+	"format": "{icon} {percent}%",
+	"format-icons": ["󰃞", "󰃟", "󰃠"],
+	"on-scroll-up": "brightnessctl set 1%+",
+	"on-scroll-down": "brightnessctl set 1%-",
+	"min-length": 6
+},
+
+"battery": {
+	"states": {
+		"good": 95,
+		"warning": 30,
+		"critical": 20
+	},
+	"format": "{icon} {capacity}%",
+	"format-charging": " {capacity}%",
+	"format-plugged": " {capacity}%",
+	"format-alt": "{time} {icon}",
+	"format-icons": ["󰂃", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+},
+
+"pulseaudio": {
+	"format": "{icon}  {volume}%",
+	"tooltip": false,
+	"format-muted": "  Muted",
+	"on-click": "pamixer -t",
+	"on-scroll-up": "pamixer -i 1",
+	"on-scroll-down": "pamixer -d 1",
+	"scroll-step": 5,
+	"format-icons": {
+		"headphone": "",
+		"hands-free": "",
+		"headset": "",
+		"phone": "",
+		"portable": "",
+		"car": "",
+		"default": ["","", "", ""]
+	}
+},
+
+"pulseaudio#microphone": {
+	"format": "{format_source}",
+	"format-source": " {volume}%",
+	"format-source-muted": "  Muted",
+	"on-click": "pamixer --default-source -t",
+	"on-scroll-up": "pamixer --default-source -i 5",
+	"on-scroll-down": "pamixer --default-source -d 5",
+	"scroll-step": 5
+},
+
+
+"custom/swaync": {
+	"tooltip":true,
+	"format": " {} {icon} ",
+	"format-icons": {
+		"notification": "<span foreground='red'><sup></sup></span>",
+		"none": "",
+		"dnd-notification": "<span foreground='red'><sup></sup></span>",
+		"dnd-none": "",
+		"inhibited-notification": "<span foreground='red'><sup></sup></span>",
+		"inhibited-none": "",
+		"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
+		"dnd-inhibited-none": ""
+	},
+	"return-type": "json",
+	"exec-if": "which swaync-client",
+	"exec": "swaync-client -swb",
+	"on-click": "swaync-client -t -sw",
+	"on-click-right": "swaync-client -d -sw",
+	"escape": true
+},
+
+"memory": {
+	"states": {
+		"c": 90,
+		"h": 60,
+		"m": 30
+	},
+	"interval": 10,
+	"format": "󰾆 {used}GB",
+	"format-m": "󰾅 {used}GB",
+	"format-h": "󰓅 {used}GB",
+	"format-c": " {used}GB",
+	"format-alt": "󰾆 {percentage}%",
+	"max-length": 10,
+	"tooltip": true,
+	"tooltip-format": "󰾆 {percentage}%\n {used:0.1f}GB/{total:0.1f}GB"
+},
+
+"cpu": {
+	"interval": 10,
+	"format": "󰍛 {usage}%",
+	"format-alt": "{icon0}{icon1}{icon2}{icon3}",
+	"format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+},
+
+"network": {
+	"tooltip": true,
+	"format-wifi": "  {essid}",
+	"format-ethernet": "󰈀 ",
+	"tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({signalStrength}%)</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>\nIP: <b>{ipaddr}/{cidr}</b>\nGateway: <b>{gwaddr}</b>\nNetmask: <b>{netmask}</b>",
+	"format-linked": "󰈀 {ifname} (No IP)",
+	"format-disconnected": "󰖪 ",
+	"tooltip-format-disconnected": "Disconnected",
+	"format-alt": "<span foreground='#99ffdd'> {bandwidthDownBytes}</span> <span foreground='#ffcc66'> {bandwidthUpBytes}</span>",
+	"interval": 2
+}
 }
