Added New confs

--- a/configs/hypr/envvars.conf
+++ b/configs/hypr/envvars.conf
@@ -1,37 +1,43 @@
-## Environment Variables
-# Change The theme of the cursor to your installed hyprcursor theme
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+# Theming Related Variables
 env	=	XCURSOR_SIZE,24
-env	=	HYPRCURSOR_SIZE,24
 env	=	QT_SCALE_FACTOR,1
+env	=	HYPRCURSOR_SIZE,24
 
 # TroubleShoots
-#env	=	MOZ_ENABLE_WAYLAND,1
-#env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
+env	=	MOZ_ENABLE_WAYLAND,1
+env	=	WLR_NO_HARDWARE_CURSORS,1
+env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Intel
-env	=	LIBVA_DRIVER_NAME,i965
-env	=	GBM_BACKEND,drm
-env	=	MESA_LOADER_DRIVER_OVERRIDE,iris
+#env	=	GBM_BACKEND,drm
+#env	=	LIBVA_DRIVER_NAME,i965
+#env	=	MESA_LOADER_DRIVER_OVERRIDE,iris
 
-# Nvidia
-#env	=	LIBVA_DRIVER_NAME,nvidia
-#env	=	GBM_BACKEND,nvidia-drm
-#env	=	__GLX_VENDOR_LIBRARY_NAME,nvidia
-#env	=	NVD_BACKEND,direct
-
-# QT
-env	=	QT_QPA_PLATFORM,wayland
-env	=	QT_QPA_PLATFORMTHEME,qt6ct
-env	=	QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env	=	QT_AUTO_SCREEN_SCALE_FACTOR,1
-env	=	QT_STYLE_OVERRIDE,kvantum
-
-# Toolkit Backend Variables
-env	=	GDK_BACKEND,wayland,x11,*
-env	=	SDL_VIDEODRIVER,wayland
-env	=	CLUTTER_BACKEND,wayland
+# NVidia
+env	=	NVD_BACKEND,direct
+env	=	GBM_BACKEND,nvidia-drm
+env	=	LIBVA_DRIVER_NAME,nvidia
+env	=	__VK_LAYER_NV_optimus,1
+env	=	__NV_PRIME_RENDER_OFFLOAD,1
+env	=	__GLX_VENDOR_LIBRARY_NAME,nvidia
+env	=	__VK_LAYER_NV_optimus,NVIDIA_only
 
 # XDG Specifications
-env	=	XDG_CURRENT_DESKTOP,Hyprland
 env	=	XDG_SESSION_TYPE,wayland
 env	=	XDG_SESSION_DESKTOP,Hyprland
+env	=	XDG_CURRENT_DESKTOP,Hyprland
+
+# Toolkit Backend Variables
+env	=	SDL_VIDEODRIVER,wayland
+env	=	CLUTTER_BACKEND,wayland
+env	=	GDK_BACKEND,wayland,x11,*
+env	=	QT_QPA_PLATFORM,wayland;xcb
+
+# Qt Variables
+env	=	QT_QPA_PLATFORMTHEME,qt6ct
+env	=	QT_QPA_PLATFORM,wayland;xcb
+env	=	QT_AUTO_SCREEN_SCALE_FACTOR,1
+env	=	QT_WAYLAND_DISABLE_WINDOWDECORATION,1
