--- a/configs/hypr/hypridle.conf
+++ b/configs/hypr/hypridle.conf
@@ -5,12 +5,10 @@ general {
 	lock_cmd = pidof hyprlock || hyprlock
 	before_sleep_cmd = loginctl lock-session
 }
-
 listener {  
 	timeout = 240
-	on-timeout = $lock_cmd
+	on-timeout = pidof hyprlock || hyprlock
 }   
-
 listener {
 	timeout = 500 
 	on-timeout = hyprctl dispatch dpms off
