--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -1,17 +1,12 @@
-#########################################
-### xwdee's Catppuccin Hyprland Theme ###
-#########################################
-
-
-#####################
-### COLOR PALLETE ###
-#####################
-source=~/.config/hypr/mocha.conf
+########################################
+### xwdee's Catpuccin Hyprland Theme ###
+########################################
+source=~/.config/hypr/mochaColors.conf
 
 ################
 ### MONITORS ###
 ################
-monitor=eDP-1,1920x1080@144,0x0,1
+monitor=,highres@highrr,auto,auto
 
 ################
 ### PROGRAMS ###
@@ -21,24 +16,12 @@ source=~/.config/hypr/programs.conf
 #################
 ### AUTOSTART ###
 #################
-source=~/.config/hypr/startup.conf
-
-###################
-### KEYBINDINGS ###
-###################
-source=~/.config/hypr/keybindings.conf
+source=~/.config/hypr/autostart.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 source=~/.config/hypr/envvars.conf
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-source=~/.config/hypr/windrules.conf
-source=~/.config/hypr/workspaces.conf
 
 #####################
 ### LOOK AND FEEL ###
@@ -47,55 +30,53 @@ general {
 	gaps_in			=	5
 	gaps_out		=	5
 	border_size		=	2
-	col.active_border	=	$blue $base $base $blue 45deg
-	col.inactive_border	=	$blue $base $base $blue 45deg
-	resize_on_border	=	true
+	col.active_border	=	$color4 $color1 $color1 $color4 45deg
+	col.inactive_border	=	$color1 $color1 $color1 $color1 45deg
+	resize_on_border	=	false
 	allow_tearing		=	false
 	layout			=	dwindle
 }
-
 decoration {
 	rounding		=	10
+	rounding_power		=	2
 	active_opacity		=	1.0
 	inactive_opacity	=	1.0
 	shadow {
 		enabled		=	true
 		range		=	4
 		render_power	=	3
-		color		=	$crust
+		color		=	$color1
 	}
 	blur {
 		enabled		=	true
 		size		=	3
-		passes		=	3
+		passes		=	1
 		vibrancy	=	0.1696
 	}
 }
-
 animations {
 	enabled		=	true
 	bezier		=	wind, 0.05, 0.9, 0.1, 1.05
-	bezier		=	winIn, 0.1, 1.1, 0.1, 1.1
-	bezier		=	winOut, 0.3, -0.3, 0, 1
-	bezier		=	liner, 1, 1, 1, 1
+	bezier		=	windIn, 0.1, 1.1, 0.1, 1.1
+	bezier		=	windOut, 0.3, -0.3, 0, 1
+	bezier		=	linear, 1, 1, 1, 1
+	animation	=	global, 1, 10, default
+	animation	=	border, 1, 1, linear
+	animation	=	borderngle, 1, 80, linear, loop
 	animation	=	windows, 1, 6, wind, slide
-	animation	=	windowsIn, 1, 6, winIn, slide
-	animation	=	windowsOut, 1, 5, winOut, slide
+	animation	=	windowsIn, 1, 6, windIn, slide
+	animation	=	windowsOut, 1, 5, windOut, slide
 	animation	=	windowsMove, 1, 5, wind, slide
-	animation	=	border, 1, 1, liner
-	animation	=	borderangle, 1, 30, liner, loop
 	animation	=	fade, 1, 10, default
 	animation	=	workspaces, 1, 5, wind
 }
-
 dwindle {
-	pseudotile		=	true
-	preserve_split		=	true
+	pseudotile	=	true
+	preserve_split	=	true
 }
-
 master {
+	new_status	=	master
 }
-
 misc {
 	force_default_wallpaper	=	0
 	disable_hyprland_logo	=	true
@@ -103,28 +84,36 @@ misc {
 	vrr			=	0
 }
 
-
 #############
 ### INPUT ###
 #############
 input {
-	kb_layout		=	us, ua, ru
-	kb_variant		=
-	kb_model		=
-	kb_options		=	grp:alt_shift_toggle
-	kb_rules		=
-	follow_mouse		=	1
-	sensitivity		=	0
+	kb_layout	=	us, ua, ru
+	kb_variant	=
+	kb_model	=
+	kb_options	=
+	kb_rules	=	grp:alt_shift_toggle
+	follow_mouse	=	1
+	sensitivity	=	0
 	touchpad {
 		natural_scroll	=	false
 	}
 }
-
 gestures {
-	workspace_swipe		=	false
+	workspace_swipe	=	false
+}
+device {
+	name	=	epic-mouse-v1
+	sensitivity	=	-0.5
 }
 
-device {
-	name			=	sinowealth-game-mouse
-	sensitivity		=	-0.5
-}
+###################
+### KEYBINDINGS ###
+###################
+source=~/.config/hypr/keybinds.conf
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+source=~/.config/hypr/winrules.conf
+source=~/.config/hypr/workspaces.conf
