--- a/configs/hypr/programs.conf
+++ b/configs/hypr/programs.conf
@@ -5,11 +5,12 @@ $terminal	=	kitty
 $terminal2	=	xterm -bg black -fg white -fs 12 -fa 'JetBrainsMono Nerd Font'
 $editor		=	code-oss
 $browser	=	/usr/bin/google-chrome-stable %U
-$fileManager	=	thunar %U
+$fileManager	=	thunar
 $menu		=	rofi -show
 $discord	=	/usr/bin/discord
 $telegram	=	DESKTOPINTEGRATION=1 ayugram-desktop -- %u
 $steam		=	/usr/bin/steam-native %U
-$music		=	spotify-launcher %U
+$music		=	spotify --uri=%U
 $youtube	=	$browser --new-window https://www.youtube.com
 $chatgpt	=	$browser --new-window https://chat.openai.com
+$volumctrl	=	pavucontrol
