--- a/configs/kitty/diff.conf
+++ b/configs/kitty/diff.conf
@@ -1,30 +1,50 @@
-pygments_style		github-dark
+# vim:ft=kitty
 
-background		#222436
-foreground		#c8d3f5
+## name:     Catppuccin Kitty Diff Mocha
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/diff-mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
 
-title_fg		#c8d3f5
-title_bg		#222436
+# text
+foreground           #cdd6f4
+# base
+background           #1e1e2e
+# subtext0
+title_fg             #a6adc8
 
-margin_bg		#222436
-margin_fg		#c8d3f5
+# mantle
+title_bg             #181825
+margin_bg            #181825
 
-removed_bg		#502436
-highlight_removed_bg	#502436
-removed_margin_bg	#c82c45
+# subtext1
+margin_fg            #a6adc8
+# mantle
+filler_bg            #181825
 
-added_bg		#223c36
-highlight_added_bg	#223c36
-added_margin_bg		#22783a
+# 30% red, 70% base
+removed_bg           #5e3f53
+# 50% red, 50% base
+highlight_removed_bg #89556b
+# 40% red, 60% base
+removed_margin_bg    #734a5f
 
-filler_bg		#2f334d
+# 30% green, 70% base
+added_bg             #475a51
+# 50% green, 50% base
+highlight_added_bg   #628168
+# 40% green, 60% base
+added_margin_bg      #734a5f
 
-margin_filler_bg	none
+# mantle
+hunk_margin_bg       #181825
+hunk_bg              #181825
 
-hunk_margin_bg		#1e2030
-hunk_bg			#1e2030
-
-search_bg		#444
-search_fg		white
-select_bg		#b4d5fe
-select_fg		black
+# 40% yellow, 60% base
+search_bg            #766c62
+# text
+search_fg            #cdd6f4
+# 30% sky, 70% base
+select_bg            #3e5767
+# text
+select_fg            #cdd6f4
