--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -1,18 +1,17 @@
 # Fonts
+font_size		14.0
 font_family		Maple Mono Regular
 bold_font		Maple Mono Bold
 italic_font		Maple Mono Italic
 bold_italic_font	Maple Mono BoldItalic
 
-font_size	14.0
-
 # Window and theme
-include	mochatheme.conf
+include		theme.conf
 enable_audio_bell	yes
 background_opacity	0.88
 remember_window_size	no
-initial_window_width	92c
-initial_window_height	28c
+initial_window_width	110c
+initial_window_height	30c
 window_padding_width	6
 confirm_os_window_close	-1
 
