--- a/configs/waybar/config.jsonc
+++ b/configs/waybar/config.jsonc
@@ -1,52 +1,21 @@
 {
 "layer": "top",
 "position": "top",
-"mode": "dock",
-"exclusive": true,
-"passthrough": false,
-"gtk-layer-shell": true,
-"height": 0,
-"modules-left": [
-	"clock",
-	"custom/cava",
-	"hyprland/language",
-	"hyprland/workspaces"
-],
-"modules-center": ["hyprland/window"],
-"modules-right": [
-	"tray",
-	"memory",
-	"cpu",
-	"network",
-	"battery",
-	"custom/swaync",
-	"backlight",
-	"pulseaudio",
-	"pulseaudio#microphone"
-],
-
-"hyprland/window": {
-	"format": "󰌽 {}"
-},
-
-"hyprland/language": {
-	"format-en": "US",
-	"format-uk": "UA",
-	"format-ru": "RU",
-	"format": "{}"
-},
+"reload_style_on_change": true,
+"modules-left": ["custom/notify","clock","custom/cava","tray"],
+"modules-center": ["hyprland/workspaces"],
+"modules-right": ["cpu","memory","temperature","group/expand","bluetooth","network","battery"],
 
 "hyprland/workspaces": {
-	"disable-scroll": true,
-	"persistent-workspaces": {
-		"1": [],
-		"2": [],
-		"3": [],
-		"4": [],
+	"format": "{icon}",
+	"format-icons": {
+		"active": "",
+		"default": "",
+		"empty": ""
 	},
-	"all-outputs": true,
-	"on-click": "activate",
-	"format": "{icon}"
+	"persistent-workspaces": {
+		"*": [ 1,2,3,4,5 ]
+	}
 },
 
 "custom/cava": {
@@ -56,101 +25,90 @@
 	"format": "{}"
 },
 
-"tray": {
-	"icon-size": 13,
-	"spacing": 10
+"custom/notify": {
+	"tooltip": false,
+	"format": "",
+	"on-click": "swaync-client -t -sw",
+	"escape": true
 },
 
 "clock": {
-	"format": "{:%A    %B-%d-%Y    %H:%M:%S}",
-	"interval": 1,
-	"rotate": 0,
+	"format": "{:%H:%M:%S}",
+	"interval": 1,   
 	"tooltip-format": "<tt>{calendar}</tt>",
 	"calendar": {
-		"mode": "month",
-		"mode-mon-col": 3,
-		"on-scroll": 1,
-		"on-click-right": "mode",
 		"format": {
-			"months": "<span color='#a6adc8'><b>{}</b></span>",
-			"weekdays": "<span color='#a6adc8'><b>{}</b></span>",
-			"today": "<span color='#a6adc8'><b>{}</b></span>",
-			"days": "<span color='#555869'><b>{}</b></span>"
+			"today": "<span color='#fAfBfC'><b>{}</b></span>"
 		}
+	},
+	"actions": {
+		"on-click-right": "shift_down",
+		"on-click": "shift_up"
 	}
 },
 
-"backlight": {
-	"device": "intel_backlight",
-	"format": "{icon} {percent}%",
-	"format-icons": ["󰃞", "󰃟", "󰃠"],
-	"on-scroll-up": "brightnessctl set 1%+",
-	"on-scroll-down": "brightnessctl set 1%-",
-	"min-length": 6
+"network": {
+	"format-wifi": "",
+	"format-ethernet":"",
+	"format-disconnected": "",
+	"tooltip-format-disconnected": "Error",
+	"tooltip-format-wifi": "{essid} ({signalStrength}%) ",
+	"tooltip-format-ethernet": "{ifname} 🖧 ",
+	"on-click": "kitty nmtui"
 },
 
+"bluetooth": {
+	"format-on": "󰂯",
+	"format-off": "BT-off",
+	"format-disabled": "󰂲",
+	"format-connected-battery": "{device_battery_percentage}% 󰂯",
+	"format-alt": "{device_alias} 󰂯",
+	"tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+	"tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+	"tooltip-format-enumerate-connected": "{device_alias}\n{device_address}",
+	"tooltip-format-enumerate-connected-battery": "{device_alias}\n{device_address}\n{device_battery_percentage}%",
+	"on-click-right": "blueman-manager",
+}, 
+
 "battery": {
+	"interval":30,
 	"states": {
 		"good": 95,
 		"warning": 30,
 		"critical": 20
 	},
-	"format": "{icon} {capacity}%",
-	"format-charging": " {capacity}%",
-	"format-plugged": " {capacity}%",
-	"format-alt": "{time} {icon}",
-	"format-icons": ["󰂃", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+"format": "{capacity}% {icon}",
+"format-charging": "{capacity}% 󰂄",
+"format-plugged": "{capacity}% 󰂄 ",
+"format-alt": "{time} {icon}",
+"format-icons": ["󰁻","󰁼","󰁾","󰂀","󰂂","󰁹"],
 },
 
-"pulseaudio": {
-	"format": "{icon}  {volume}%",
-	"tooltip": false,
-	"format-muted": "  Muted",
-	"on-click": "pamixer -t",
-	"on-scroll-up": "pamixer -i 1",
-	"on-scroll-down": "pamixer -d 1",
-	"scroll-step": 5,
-	"format-icons": {
-		"headphone": "",
-		"hands-free": "",
-		"headset": "",
-		"phone": "",
-		"portable": "",
-		"car": "",
-		"default": ["","", "", ""]
-	}
+"custom/expand": {
+	"format": "",
+	"tooltip": false
 },
 
-"pulseaudio#microphone": {
-	"format": "{format_source}",
-	"format-source": " {volume}%",
-	"format-source-muted": "  Muted",
-	"on-click": "pamixer --default-source -t",
-	"on-scroll-up": "pamixer --default-source -i 5",
-	"on-scroll-down": "pamixer --default-source -d 5",
-	"scroll-step": 5
+"custom/endpoint":{
+	"format": "|",
+	"tooltip": false
 },
 
+//"group/expand": {
+//	"orientation": "horizontal",
+//	"drawer": {
+//		"transition-duration": 600,
+//		"transition-to-left": true,
+//		"click-to-reveal": true
+//	},
+//	"modules": ["custom/expand","cpu","memory","temperature","custom/endpoint"],
+//},
 
-"custom/swaync": {
-	"tooltip":true,
-	"format": " {} {icon} ",
-	"format-icons": {
-		"notification": "<span foreground='red'><sup></sup></span>",
-		"none": "",
-		"dnd-notification": "<span foreground='red'><sup></sup></span>",
-		"dnd-none": "",
-		"inhibited-notification": "<span foreground='red'><sup></sup></span>",
-		"inhibited-none": "",
-		"dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
-		"dnd-inhibited-none": ""
-	},
-	"return-type": "json",
-	"exec-if": "which swaync-client",
-	"exec": "swaync-client -swb",
-	"on-click": "swaync-client -t -sw",
-	"on-click-right": "swaync-client -d -sw",
-	"escape": true
+"cpu": {
+	"interval": 10,
+	"format": "󰍛 {usage}%",
+	"format-alt": "{icon0}{icon1}{icon2}{icon3}",
+	"format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
 },
 
 "memory": {
@@ -170,22 +128,19 @@
 	"tooltip-format": "󰾆 {percentage}%\n {used:0.1f}GB/{total:0.1f}GB"
 },
 
-"cpu": {
+"temperature": {
 	"interval": 10,
-	"format": "󰍛 {usage}%",
-	"format-alt": "{icon0}{icon1}{icon2}{icon3}",
-	"format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+	"tooltip": true,
+	"hwmon-path": ["/sys/class/hwmon/hwmon1/temp1_input", "/sys/class/thermal/thermal_zone0/temp"],
+	"critical-threshold": 80,
+	"format-critical": "{icon} {temperatureC}°C",
+	"format": "{icon} {temperatureC}°C",
+	"format-icons": [""],
+	"on-click-right": "kitty --title BTop sh -c 'btop'"
 },
 
-"network": {
-	"tooltip": true,
-	"format-wifi": "  {essid}",
-	"format-ethernet": "󰈀 ",
-	"tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({signalStrength}%)</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>\nIP: <b>{ipaddr}/{cidr}</b>\nGateway: <b>{gwaddr}</b>\nNetmask: <b>{netmask}</b>",
-	"format-linked": "󰈀 {ifname} (No IP)",
-	"format-disconnected": "󰖪 ",
-	"tooltip-format-disconnected": "Disconnected",
-	"format-alt": "<span foreground='#99ffdd'> {bandwidthDownBytes}</span> <span foreground='#ffcc66'> {bandwidthUpBytes}</span>",
-	"interval": 2
-}
-}
+"tray": {
+	"icon-size": 14,
+	"spacing": 10
+},
+} 
