--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -30,8 +30,8 @@ general {
 	gaps_in			=	5
 	gaps_out		=	5
 	border_size		=	2
-	col.active_border	=	$color4 $color1 $color1 $color4 45deg
-	col.inactive_border	=	$color1 $color1 $color1 $color1 45deg
+	col.active_border	=	$blue $base $base $blue 45deg
+	col.inactive_border	=	$blue $base $base $blue 45deg
 	resize_on_border	=	false
 	allow_tearing		=	false
 	layout			=	dwindle
@@ -45,7 +45,7 @@ decoration {
 		enabled		=	true
 		range		=	4
 		render_power	=	3
-		color		=	$color1
+		color		=	$crust
 	}
 	blur {
 		enabled		=	true
