--- a/configs/hypr/windrules.conf
+++ b/configs/hypr/windrules.conf
@@ -1,9 +1,9 @@
 ## Example Window Rules V1
-#windowrule	=	float, kitty
-windowrule	=	float, jome
-windowrule	=	size 900 512, thunar
-windowrule	=	float, thunar
-windowrule	=	move center, thunar
+#windowrule	=	float, class:^(kitty)$
+windowrule	=	float, class:^(jome)$
+windowrule	=	size 900 512, class:^(thunar)$
+windowrule	=	float, class:^(thunar)$
+windowrule	=	move center, class:^(thunar)$
 
 ## Example Window Rules V2
 windowrulev2	=	float,class:^(de.haeckerfelix.Fragments)$
