--- a/hypr/winrules.conf
+++ b/hypr/winrules.conf
@@ -15,17 +15,17 @@ layerrule	=	ignorealpha 0.1, swaync-control-center
 layerrule	=	ignorealpha 0.1, swaync-notification-window
 
 ## Window Rules V1
-windowrule	=	tile, scrcpy
-windowrule	=	float, jome
-windowrule	=	float, ario
-windowrule	=	float, thunar
-windowrule	=	pseudo, ario
-windowrule	=	pseudo, scrcpy
-windowrule	=	move center, thunar
-windowrule	=	size 900 512, thunar
-windowrule	=	size 464 1026, scrcpy
-windowrule	=	size 1360 890, ario
-windowrule	=	size 1020 826, de.haeckerfelix.Fragments
+windowrule	=	tile, class:^(scrcpy)$
+windowrule	=	float, class:^(jome)$
+windowrule	=	float, class:^(ario)$
+windowrule	=	float, class:^(thunar)$
+windowrule	=	pseudo, class:^(ario)$
+windowrule	=	pseudo, class:^(scrcpy)$
+windowrule	=	move center, class:^(thunar)$
+windowrule	=	size 900 512, class:^(thunar)$
+windowrule	=	size 464 1026, class:^(scrcpy)$
+windowrule	=	size 1360 890, class:^(ario)$
+windowrule	=	size 1020 826, class:^(de.haeckerfelix.Fragments)$
 
 ## Window Rules V2
 windowrulev2	=	workspace 2,class:^(zoom)$
