--- a/hypr/envvars.conf
+++ b/hypr/envvars.conf
@@ -13,12 +13,14 @@ env	=	ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Intel
 #env	=	GBM_BACKEND,drm
+#env	=	VDPAU_DRIVER,i965
 #env	=	LIBVA_DRIVER_NAME,i965
 #env	=	MESA_LOADER_DRIVER_OVERRIDE,iris
 
 # NVidia
 env	=	NVD_BACKEND,direct
 env	=	GBM_BACKEND,nvidia-drm
+env	=	VDPAU_DRIVER,nvidia
 env	=	LIBVA_DRIVER_NAME,nvidia
 env	=	__VK_LAYER_NV_optimus,1
 env	=	__NV_PRIME_RENDER_OFFLOAD,1
@@ -31,9 +33,9 @@ env	=	XDG_SESSION_DESKTOP,Hyprland
 env	=	XDG_CURRENT_DESKTOP,Hyprland
 
 # Toolkit Backend Variables
-env	=	SDL_VIDEODRIVER,wayland
 env	=	CLUTTER_BACKEND,wayland
 env	=	GDK_BACKEND,wayland,x11,*
+env	=	SDL_VIDEODRIVER,wayland,x11
 env	=	QT_QPA_PLATFORM,wayland;xcb
 
 # Qt Variables
