--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -2,15 +2,22 @@
 ### HYPRIDLE ###
 ################
 general {
-	lock_cmd = pidof hyprlock || hyprlock
+	lock_cmd = pidof hyprlock || hyprblock
 	before_sleep_cmd = loginctl lock-session
+	after_sleep_cmd = hyprctl dispatch dpms on
 }
-listener {  
-	timeout = 240
-	on-timeout = pidof hyprlock || hyprlock
-}   
 listener {
-	timeout = 500 
+	timeout = 140
+	on-timeout = brightnessctl --save set 10%
+	on-resume = brightnessctl --restore
+}
+listener {
+	timeout = 260
+	on-timeout = loginctl lock-session
+	on-resume = wellback
+}
+listener {
+	timeout = 320
 	on-timeout = hyprctl dispatch dpms off
 	on-resume = hyprctl dispatch dpms on
 }
