--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,7 +6,7 @@ source=~/.config/hypr/mochaColors.conf
 ################
 ### MONITORS ###
 ################
-monitor=,highres@highrr,auto,auto
+monitor=eDP-1,1920x1080@144,0x0,1,bitdepth,10
 
 ################
 ### PROGRAMS ###
@@ -22,6 +22,17 @@ source=~/.config/hypr/autostart.conf
 ### ENVIRONMENT VARIABLES ###
 #############################
 source=~/.config/hypr/envvars.conf
+
+###################
+### KEYBINDINGS ###
+###################
+source=~/.config/hypr/keybinds.conf
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+source=~/.config/hypr/winrules.conf
+source=~/.config/hypr/workspaces.conf
 
 #####################
 ### LOOK AND FEEL ###
@@ -62,7 +73,7 @@ animations {
 	bezier		=	linear, 1, 1, 1, 1
 	animation	=	global, 1, 10, default
 	animation	=	border, 1, 1, linear
-	animation	=	borderngle, 1, 80, linear, loop
+	animation	=	borderangle, 1, 80, linear, loop
 	animation	=	windows, 1, 6, wind, slide
 	animation	=	windowsIn, 1, 6, windIn, slide
 	animation	=	windowsOut, 1, 5, windOut, slide
@@ -88,11 +99,11 @@ misc {
 ### INPUT ###
 #############
 input {
-	kb_layout	=	us, ua, ru
-	kb_variant	=
-	kb_model	=
-	kb_options	=
-	kb_rules	=	grp:alt_shift_toggle
+	kb_layout	=	us,ua,ru
+	kb_variant	=	,winkeys
+	kb_model	=	pc104
+	kb_options	=	grp:alt_shift_toggle
+	kb_rules	=	evdev
 	follow_mouse	=	1
 	sensitivity	=	0
 	touchpad {
@@ -106,14 +117,3 @@ device {
 	name	=	epic-mouse-v1
 	sensitivity	=	-0.5
 }
-
-###################
-### KEYBINDINGS ###
-###################
-source=~/.config/hypr/keybinds.conf
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-source=~/.config/hypr/winrules.conf
-source=~/.config/hypr/workspaces.conf
