--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -2,16 +2,17 @@ source=~/.config/hypr/mochaColors.conf
 $accent		=	$mauve
 $accentAlpha	=	$mauveAlpha
 $font		=	JetBrainsMono Nerd Font
+$wallpapers	=	$HOME/.config/background
 
 # GENERAL
 general {
-	disable_loading_bar	=	true
+	#disable_loading_bar	=	true
 	hide_cursor		=	true
 }
 
 # BACKGROUND
 background {
-	path		=	$HOME/.config/background
+	path		=	$wallpapers/cabin_blurred.png
 	blur_passes	=	0
 	color		=	$base
 }
