--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
 #################
 ### HYPRPAPER ###
 #################
-#$wallpapers	=
-$wallpaper1	=	~/Pictures/backgrounds/cat_leaves.png
+$wallpapers	=	$HOME/.config/background
+$wallpaper1	=	$wallpapers/cabin.png
 $monitor1	=	eDP-1
 preload		=	$wallpaper1
 wallpaper	=	$monitor1, $wallpaper1
