--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -3,9 +3,10 @@
 ###################
 $mainMod=	SUPER
 $hyprDir=	~/.config/hypr
+$script	=	$hyprDir/scripts
 
 ## Keybind to restart waybar and swaync
-bind	=	Ctrl, Escape, exec, $hyprDir/../waybar/restart.sh
+bind	=	Ctrl, Escape, exec, $script/restart.sh
 #bind	=	Ctrl, Escape, exec, killall waybar swaync && waybar & swaync &
 
 ## Fullscreen
@@ -18,7 +19,8 @@ bindl	=	SHIFT, code:107, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
 ## Programs
 bind	=	$mainMod, Y, exec, $youtube
 bind	=	$mainMod, D, exec, $emoji_picker
-bind	=	$mainMod, G, exec, $browser --new-window https://github.com/
+bind	=	$mainMod, V, exec, clipman pick -t rofi
+bind	=	$mainMod, G, exec, $browser --new-window https://github.com
 bind	=	$mainMod SHIFT, E, exec, $editor
 bind	=	$mainMod, T, exec, $telegram
 bind	=	$mainMod ALT, T, exec, $chatgpt
@@ -42,7 +44,7 @@ bind	=	$mainMod, C, killactive,
 bind	=	$mainMod SHIFT, C, centerwindow
 bind	=	$mainMod, Escape, exec, wlogout -b 4
 bind	=	$mainMod, R, exec, $menu drun
-bind	=	$mainMod, L, exec, hyprlock
+bind	=	$mainMod, L, exec, $script/hyprlock
 bind	=	$mainMod, P, pseudo,
 bind	=	$mainMod, J, togglesplit,
 bindel	=	$mainMod, F3, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
