--- a/hypr/programs.conf
+++ b/hypr/programs.conf
@@ -3,14 +3,15 @@
 ################
 $terminal	=	kitty
 $terminal2	=	xterm -bg black -fg white -fs 12 -fa 'JetBrainsMono Nerd Font'
-$editor		=	code-oss
+$editor		=	code-oss --disable-gpu
 $browser	=	/usr/bin/google-chrome-stable %U
 $fileManager	=	thunar
 $menu		=	rofi -show
-$discord	=	/usr/bin/discord
-$telegram	=	DESKTOPINTEGRATION=1 ayugram-desktop -- %u
+$discord	=	/usr/bin/discord --disable-gpu
+$telegram	=	env DESKTOPINTEGRATION=1 ayugram-desktop -- %u
 $steam		=	/usr/bin/steam-native %U
-$music		=	spotify --uri=%U
+$music		=	env LD_PRELOAD=/lib/spotify-adblock.so spotify --uri=%U
 $youtube	=	$browser --new-window https://www.youtube.com
 $chatgpt	=	$browser --new-window https://chat.openai.com
 $volumctrl	=	pavucontrol
+$volumport	=	audiorelay %U
