--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -1,12 +1,12 @@
 [Appearance]
-color_scheme_path=/home/xunta/.config/qt5ct/mocha.conf
+color_scheme_path=/home/xunta/.config/qt5ct/colors/mocha.conf
 custom_palette=true
 icon_theme=Tela-circle-dracula
 standard_dialogs=gtk3
 style=Fusion
 
 [Fonts]
-fixed="Cantarell,12,-1,5,50,0,0,0,0,0"
+fixed="Maple Mono,12,-1,5,50,0,0,0,0,0"
 general="Cantarell,12,-1,5,50,0,0,0,0,0"
 
 [Interface]
