--- a/hypr/winrules.conf
+++ b/hypr/winrules.conf
@@ -25,16 +25,22 @@ windowrule	=	move center, class:^(thunar)$
 windowrule	=	size 900 512, class:^(thunar)$
 windowrule	=	size 464 1026, class:^(scrcpy)$
 windowrule	=	size 1360 890, class:^(ario)$
+windowrule	=	size 510 510, class:^(com.github.hluk.copyq)$
+windowrule	=	size 600 650, class:^(org.gnome.NetworkDisplays)$
 windowrule	=	size 1020 826, class:^(de.haeckerfelix.Fragments)$
+windowrule	=	fullscreen, class:^(org.pulseaudio.pavucontrol)$
+windowrule	=	fullscreen, class:^(com-azefsw-audioconnect-desktop-app-MainKt)$
+windowrule	=	workspace 4, class:^(org.telegram.desktop)$
 
 ## Window Rules V2
 windowrulev2	=	workspace 2,class:^(zoom)$
 windowrulev2	=	workspace 2,class:^(code-oss)$
-windowrulev2	=	workspace 3,class:^(Spotify)$
+windowrulev2	=	workspace 3,class:^(spotify)$
 windowrulev2	=	workspace 3,class:^(com.viber.Viber)$
 windowrulev2	=	workspace 4,class:^(com.ayugram.desktop)$
 windowrulev2	=	workspace 5,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2	=	workspace 6,class:^(com.obsproject.Studio)$
+windowrulev2	=	workspace 6,class:^(com-azefsw-audioconnect-desktop-app-MainKt)$
 windowrulev2	=	opacity 0.90 0.90,class:^(google-chrome)$
 windowrulev2	=	opacity 0.80 0.80,class:^(Code)$
 windowrulev2	=	opacity 0.80 0.80,class:^(steam)$
@@ -45,18 +51,20 @@ windowrulev2	=	opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2	=	opacity 0.80 0.80,class:^(Lxappearance)$
 windowrulev2	=	opacity 0.80 0.80,class:^(qt5ct)$
 windowrulev2	=	opacity 0.80 0.80,class:^(qt6ct)$
+windowrulev2	=	opacity 0.80 0.80,class:^(thunar)$
 windowrulev2	=	opacity 0.80 0.80,class:^(scrcpy)$
 windowrulev2	=	opacity 0.80 0.80,class:^(org.kde.kdeconnect.handler)$
 windowrulev2	=	opacity 0.80 0.80,class:^(kvantummanager)$
 windowrulev2	=	opacity 0.80 0.70,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2	=	opacity 0.80 0.70,class:^(com-azefsw-audioconnect-desktop-app-MainKt)$
 windowrulev2	=	opacity 0.80 0.70,class:^(blueman-manager)$
 windowrulev2	=	opacity 0.80 0.70,class:^(nm-applet)$
-windowrulev2	=	opacity 0.70 0.70,class:^(Spotify)$
+windowrulev2	=	opacity 0.70 0.70,class:^(spotify)$
 windowrulev2	=	opacity 0.80 0.70,class:^(nm-connection-editor)$
+windowrulev2	=	opacity 0.80 0.70,class:^(com.github.hluk.copyq)$
 windowrulev2	=	opacity 0.80 0.70,class:^(polkit-gnome-authentication-agent-1)$
 windowrulev2	=	opacity 0.80 0.70,class:^(org.gnome.seahorse.Application)$
 windowrulev2	=	opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrulev2	=	opacity 0.80 0.70,float,move center, size 512 900, class:^(thunar)$
 windowrulev2	=	opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
 
 windowrulev2	=	float,class:^(zenity)$
@@ -72,14 +80,17 @@ windowrulev2	=	float,class:^(it.mijorus.smile)
 windowrulev2	=	float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2	=	float,class:^(org.kde.kdeconnect.handler)$
 windowrulev2	=	float,class:^(org.gnome.seahorse.Application)$
-windowrulev2	=	float,class:^(pavucontrol)$
 windowrulev2	=	float,class:^(org.prismlauncher.PrismLauncher)$
 windowrulev2	=	float,class:^(blueman-manager)$
 windowrulev2	=	float,class:^(nm-applet)$
 windowrulev2	=	float,class:^(nm-connection-editor)$
+windowrulev2	=	float,class:^(com.github.hluk.copyq)$
+windowrulev2	=	float,class:^(org.gnome.NetworkDisplays)$
 windowrulev2	=	float,class:^(polkit-gnome-authentication-agent-1)$
+windowrulev2	=	float,title:^(Виберіть файли)$
 windowrulev2	=	opaque,class:(vlc)
 windowrulev2	=	pseudo,class:^(de.haeckerfelix.Fragments)$
+windowrulev2	=	pseudo,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2	=	nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 ## Picture-in-Picture special treatment
