--- a/qt6ct/qt6ct.conf
+++ b/qt6ct/qt6ct.conf
@@ -1,12 +1,12 @@
 [Appearance]
 color_scheme_path=/usr/share/qt6ct/colors/darker.conf
-custom_palette=false
+custom_palette=true
 icon_theme=Tela-circle-dracula
 standard_dialogs=gtk3
 style=kvantum-dark
 
 [Fonts]
-fixed="Cantarell,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
+fixed="Maple Mono,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 general="Cantarell,12,-1,5,400,0,0,0,0,0,0,0,0,0,0,1,Regular"
 
 [Interface]
