--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,23 +1,9 @@
 #################
 ### AUTOSTART ###
 #################
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once=wl-paste -t text --watch clipman store --histpath=~/.local/share/clipman.json
-exec-once	=	hyprlock
-exec-once	=	hyprpaper
-exec-once	=	hypridle
-exec-once	=	swaync
-exec-once	=	waybar
-exec-once	=	nm-applet
-exec-once	=	kdeconnectd
-exec-once	=	blueman-applet
-exec-once	=	blueman-tray
-exec-once	=	adb start-server
-exec-once	=	$telegram -autostart
-exec-once	=	$discord --start-minimized
-exec-once	=	$steam -no-browser -silent &
-exec-once	=	easyeffects --gapplication-service
+exec-once=wl-paste -t text -w clipman store --histpath=~/.local/share/clipman.json
+exec-once	=	uwsm app -- hyprlock
 #exec-once	=	[workspace 3 silent] $discord
 #exec-once	=	[workspace 4 silent] $telegram
 exec-once	=	[workspace 5 silent] $volumctrl
