--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -2,7 +2,7 @@
 ### HYPRPAPER ###
 #################
 $wallpapers	=	$HOME/.config/background
-$wallpaper1	=	$wallpapers/cabin.png
+$wallpaper1	=	$wallpapers/trippy-purple.png
 $monitor1	=	eDP-1
 preload		=	$wallpaper1
 wallpaper	=	$monitor1, $wallpaper1
