--- a/hypr/keybinds.conf
+++ b/hypr/keybinds.conf
@@ -6,7 +6,7 @@ $hyprDir=	~/.config/hypr
 $script	=	$hyprDir/scripts
 
 ## Keybind to restart waybar and swaync
-bind	=	Ctrl, Escape, exec, $script/restart.sh
+#bind	=	Ctrl, Escape, exec, $script/waybarRestart.sh
 #bind	=	Ctrl, Escape, exec, killall waybar swaync && waybar & swaync &
 
 ## Fullscreen
@@ -24,7 +24,7 @@ bind	=	$mainMod, G, exec, $browser --new-window https://github.com
 bind	=	$mainMod SHIFT, E, exec, $editor
 bind	=	$mainMod, T, exec, $telegram
 bind	=	$mainMod ALT, T, exec, $chatgpt
-bind	=	$mainMod, O, exec, $script/scrcpy.sh
+bind	=	$mainMod, O, exec, uwsm app -- $script/scrcpy.sh
 bind	=	$mainMod ALT, SPACE, exec, $script/gamemode.sh
 bind	=	$mainMod, Q, exec, $terminal
 bind	=	$mainMod ALT, Q, exec, [silent;float] $terminal
@@ -33,7 +33,7 @@ bind	=	$mainMod, E, exec, $fileManager
 bind	=	$mainMod, B, exec, $browser
 bind	=	$mainMod, A, exec, $music
 bind	=	$mainMod, H, exec, hyprpicker -a
-bind	=	$mainMod, M, exec, $terminal nmtui
+bind	=	$mainMod, M, exec, [silent;float] $terminal nmtui
 
 ## Settings
 bind	=	$mainMod, I, exec, playerctl play-pause
@@ -44,7 +44,7 @@ bind	=	$mainMod, C, killactive,
 bind	=	$mainMod SHIFT, C, centerwindow
 bind	=	$mainMod, Escape, exec, wlogout -b 4
 bind	=	$mainMod, R, exec, $menu drun
-bind	=	$mainMod, L, exec, $script/hyprlock
+bind	=	$mainMod, L, exec, $script/lockscreen.sh
 bind	=	$mainMod, P, pseudo,
 bind	=	$mainMod, J, togglesplit,
 bindel	=	$mainMod, F3, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
