--- a/hypr/programs.conf
+++ b/hypr/programs.conf
@@ -1,17 +1,18 @@
 ################
 ### PROGRAMS ###
 ################
-$terminal	=	kitty
-$terminal2	=	xterm -bg black -fg white -fs 12 -fa 'JetBrainsMono Nerd Font'
-$editor		=	code-oss --disable-gpu
-$browser	=	/usr/bin/google-chrome-stable %U
-$fileManager	=	thunar
-$menu		=	rofi -show
-$discord	=	/usr/bin/discord --disable-gpu
-$telegram	=	env DESKTOPINTEGRATION=1 ayugram-desktop -- %u
-$steam		=	/usr/bin/steam-native %U
-$music		=	env LD_PRELOAD=/lib/spotify-adblock.so spotify --uri=%U
+$terminal	=	uwsm app -- kitty
+$terminal2	=	uwsm app -- xterm -bg black -fg white -fs 12 -fa 'JetBrainsMono Nerd Font'
+$editor		=	uwsm app -- code-oss --disable-gpu
+$browser	=	uwsm app -- google-chrome-stable %U
+$fileManager	=	uwsm app -- thunar
+$menu		=	rofi -run-command "uwsm app -- {cmd}" -show
+$discord	=	uwsm app -- discord --disable-gpu
+$telegram	=	uwsm app -- env DESKTOPINTEGRATION=1 ayugram-desktop -- %u
+$steam		=	uwsm app -- steam-native %U
+$music		=	uwsm app -- env LD_PRELOAD=/lib/spotify-adblock.so spotify --uri=%U
 $youtube	=	$browser --new-window https://www.youtube.com
 $chatgpt	=	$browser --new-window https://chat.openai.com
-$volumctrl	=	pavucontrol
-$volumport	=	audiorelay %U
+$volumctrl	=	uwsm app -- pavucontrol
+$volumport	=	uwsm app -- audiorelay %U
+$emoji_picker	=	it.mijorus.smile
