--- a/hypr/winrules.conf
+++ b/hypr/winrules.conf
@@ -23,11 +23,12 @@ windowrule	=	pseudo, class:^(ario)$
 windowrule	=	pseudo, class:^(scrcpy)$
 windowrule	=	move center, class:^(thunar)$
 windowrule	=	size 900 512, class:^(thunar)$
-windowrule	=	size 464 1026, class:^(scrcpy)$
+windowrule	=	size 1600 900, class:^(scrcpy)$
 windowrule	=	size 1360 890, class:^(ario)$
 windowrule	=	size 510 510, class:^(com.github.hluk.copyq)$
 windowrule	=	size 600 650, class:^(org.gnome.NetworkDisplays)$
 windowrule	=	size 1020 826, class:^(de.haeckerfelix.Fragments)$
+windowrule	=	fullscreen, class:^(Waydroid)$
 windowrule	=	fullscreen, class:^(org.pulseaudio.pavucontrol)$
 windowrule	=	fullscreen, class:^(com-azefsw-audioconnect-desktop-app-MainKt)$
 windowrule	=	workspace 4, class:^(org.telegram.desktop)$
@@ -73,7 +74,6 @@ windowrulev2	=	float,class:^(xarchiver)$
 windowrulev2	=	float,class:^(kvantummanager)$
 windowrulev2	=	float,class:^(qt5ct)$
 windowrulev2	=	float,class:^(qt6ct)$
-windowrulev2	=	float,class:^(scrcpy)$
 windowrulev2	=	float,class:^(nwg-look)$
 windowrulev2	=	float,class:^(Lxappearance)$
 windowrulev2	=	float,class:^(it.mijorus.smile)
