--- a/swaync/config.json
+++ b/swaync/config.json
@@ -72,15 +72,15 @@
 				},
 				{
 					"label":"",
-					"command": "reboot"
+					"command": "systemctl reboot"
 				},
 				{
 					"label":"",
-					"command": "shutdown now"
+					"command": "systemctl poweroff"
 				},
 				{
 					"label": "",
-					"command": "/home/xunta/.config/hypr/scripts/hyprlock"
+					"command": "hyprblock"
 				}
 			]
 		}
